src/components/Pages/NotebookPage/style.scss
.notebook-detail {
  min-height: 75vh;

  h2 {
    font-size: 2.25rem;
  }

  h3 {
    font-size: 2rem;
  }

  p, li, pre, h4, h5, h6 {
    font-size: 1.2rem;
  }

  header {
    margin-bottom: 32px;

    .notebook-detail__title {
      font-size: 2.7rem;
      margin-bottom: 18px;
    }

    .notebook-detail__tags {

      .notebook-detail__tag {
        padding: 4px 12px;
        border-radius: 4px;
        border: 1px solid var(--on-background);
        margin: 0 8px 0 0;
      }

      .notebook-detail__tag::before {
        content: '#';
      }
    }
  }

  .markdown-body {
    font-family: 'Inter', sans-serif;
    line-height: 1.75;
    background-color: var(--background);
    color: var(--on-background);

    img {
      width: 100%;
      border-radius: 8px;
    }
  }

  .markdown-body blockquote {
    color: var(--on-background-grey);
  }
}

